ajout du backoffice

--- a/lib/i18n/en.i18n.yml
+++ b/lib/i18n/en.i18n.yml
@@ -1,1 +1,2 @@
 hello: hello boy
+helpme: if you have an idea, a sugestion a remarque about hom to improve our application call me or send me a mail !
